# Quadcopter-Indoor-Positioning-System

Measurements/Measurements_Method1_TOA/: Measurement Explaination.txt
Measurements/Measurements_Method2_TWR/: Measurement Explaination.txt  Measurements.xlsx  Measurements_basic_ForUsageInLatex.tex  Measurements_detail_ForUsageInLatex.tex  ~$Measurements.xlsx
Method1_TOA/RPI3/ATLAS_RPI2/: ATLAS_RPI.cbp  ATLAS_RPI.depend  ATLAS_RPI.layout  README_adapt_for_Fedora.md  atlas_comm_conf.h  config.yaml
Method1_TOA/RPI3/ATLAS_RPI2/atlas_src/: atlas_types.h  config.cpp  config.h  logger.cpp  main.cpp  parser.cpp  parser.h  reporter.cpp  reporter.h  toa.cpp  (+2 more)
Method1_TOA/RPI3/ATLAS_RPI2/ethernet/: CMakeLists.txt
Method1_TOA/RPI3/PI_BaseStation2/: PI_BaseStation.cbp  PI_BaseStation.depend  PI_BaseStation.layout  main.c
Method1_TOA/RPI3/PI_Reporter/: PI_Reporter.cbp  PI_Reporter.depend  PI_Reporter.layout  main.c
Method1_TOA/RPI3/PI_SyncNode2/: PI_SyncNode.cbp  PI_SyncNode.depend  PI_SyncNode.layout  main.c
Method1_TOA/RPI3/PI_Target/: PI_Targer.depend  PI_Target.cbp  PI_Target.depend  PI_Target.layout  main.c
Method2_TWR/IPS_Output/: IPS_Output.sln
Method2_TWR/IPS_Output/Debug/: IPS_Output.ilk
Method2_TWR/IPS_Output/IPS_Output/: IPS_Output.cpp  IPS_Output.vcxproj  IPS_Output.vcxproj.filters
Method2_TWR/RPI3/ATLAS_RPI_TWR/: 1_Structure ATLAS.txt  2_Overview description ATLAS.txt  ATLAS_RPI.cbp  ATLAS_RPI.depend  ATLAS_RPI.layout  atlas_comm_conf.h  config.yaml
Method2_TWR/RPI3/PI_Target_TWR/: PI_Target_TWR.cbp  PI_Target_TWR.depend  PI_Target_TWR.layout  main.c
(+100 files in other folders)
